# actix-example

./: .env  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs  member.rs  post.rs  server.rs
core/: Cargo.toml
core/src/: lib.rs  member.rs  member_model.rs  post.rs
entity/: Cargo.toml
entity/src/: member.rs
src/: main.rs
